<resources>
    <string name="app_name">Jhow Shopp List</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="add_item_label">Add item</string>
    <string name="add_item_submit">Add current item</string>
    <string name="add_item_placeholder">Milk, coffee, tomatoes\u2026</string>
    <string name="purchase_selected_items">Mark selected items as purchased</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="exit_selection_mode">Exit selection mode</string>
    <string name="pending_items_title">Pending items</string>
    <string name="purchased_items_title">Purchased history</string>
    <string name="empty_pending_helper">Add your first item from the input bar.</string>
    <string name="empty_purchased_helper">Purchased items will appear here.</string>
    <string name="delete_item_swipe_label">Delete item</string>
    <string name="shopping_item_state_pending">pending</string>
    <string name="shopping_item_state_selected">selected</string>
    <string name="shopping_item_state_purchased">purchased</string>
    <string name="shopping_item_action_mark_purchased">Mark purchased</string>
    <string name="shopping_item_action_restore_pending">Restore to pending</string>
    <string name="shopping_item_action_delete">Delete</string>
    <string name="delete_item_snackbar_single">Item deleted</string>
    <string name="delete_item_undo">Undo</string>
    <plurals name="delete_item_snackbar_multiple">
        <item quantity="one">%1$d item deleted</item>
        <item quantity="other">%1$d items deleted</item>
    </plurals>
    <string name="sync_now">Sync now</string>
    <string name="sync_settings">Sync settings</string>
    <string name="sync_server_label">Server</string>
    <string name="sync_username_label">Username</string>
    <string name="sync_password_label">Password</string>
    <string name="sync_password_show">Show password</string>
    <string name="sync_password_hide">Hide password</string>
    <string name="sync_list_name_label">List name</string>
    <string name="sync_create_missing_list">Create remote list</string>
    <string name="sync_password_saved_placeholder">Saved password on device</string>
    <string name="caldav_config_title">Configure CalDAV</string>
    <string name="caldav_config_title_success">Connected</string>
    <string name="caldav_config_back">Back</string>
    <string name="caldav_config_save_connect">Save &amp; Connect</string>
    <string name="caldav_config_saved_headline">Configuration Saved!</string>
    <string name="caldav_config_connected_to">Connected to: %1$s</string>
    <string name="caldav_config_success_icon">Success</string>
    <string name="caldav_config_done">Done</string>
    <string name="caldav_config_configure_another">Configure Another</string>
</resources>
